<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>leeds_pump_launch</name>
  <version>0.0.0</version>
  <description>Launch files for the Leeds Pump examples</description>
  <maintainer email="a.j.blight@leeds.ac.uk">Andy Blight</maintainer>
  <license>MIT</license>

  <!-- Need these for all builds. -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <exec_depend>leeds_pump_combined_client</exec_depend>
  <exec_depend>leeds_pump_combined_server</exec_depend>

</package>
