<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>leeds_pump_msgs</name>
  <version>0.0.0</version>
  <description>Messages for the Leeds Pump</description>
  <maintainer email="a.j.blight@leeds.ac.uk">Andy Blight</maintainer>
  <license>MIT</license>

  <!-- Need these for all builds. -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <!-- Tools needed to build the custom messages. -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- ROS messages that are used by this project. -->
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>action_msgs</depend>

</package>
