<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>leeds_pump_single_publisher</name>
  <version>0.0.0</version>
  <description>The Leeds Pump example single publisher</description>
  <maintainer email="a.j.blight@leeds.ac.uk">Andy Blight</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Test dependencies. -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>

  <!-- ROS dependencies. -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>leeds_pump_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
